<resources>
    <string name="app_name">demoproject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="version">Version 1.0.0</string>
    <string name="logout_button">LOG OUT</string>
    <string name="liked_recipes">Liked Recipes</string>
    <string name="my_recipes">My Recipes</string>
    <string name="to_login_page">ALREADY A USER? LOG IN</string>
    <string name="signup_button">SIGN UP</string>
    <string name="password">PASSWORD</string>
    <string name="signup_email">EMAIL ADDRESS</string>
    <string name="username">USER NAME</string>
    <string name="to_signup_page">NOT A USER? SIGN UP</string>
    <string name="login_button">LOG IN</string>
    <string name="select_category">Select Category</string>
        <string-array name="recipe_categories">
            <item>Select Category</item>
            <item>Chicken</item>
            <item>Pork</item>
            <item>Beef</item>
            <item>Seafood</item>
            <item>Vegan</item>
            <item>""</item>
        </string-array>

</resources>