<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <View
        android:background="@color/theme"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <ImageView
        android:background="@color/theme"
        android:src="@mipmap/logo_img"
        android:layout_width="match_parent"
        android:layout_height="150dp"/>

    <TextView
        android:background="@color/theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="MY RECIPE"/>

    <View
        android:background="@color/theme"
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:background="@drawable/rounded_corners"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"/>



        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/edit_background"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <EditText
                android:id="@+id/login_username"
                android:background="@android:color/transparent"
                android:hint="@string/username"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/edit_background"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <EditText
                android:id="@+id/login_password"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <ProgressBar
                android:id="@+id/login_progressbar"
                style="?android:attr/progressBarStyle"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:id="@+id/login_button"
            android:text="@string/login_button"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/submit_background"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

        <TextView
            android:id="@+id/to_signup_page"
            android:layout_marginTop="30dp"
            android:text="@string/to_signup_page"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>





    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>